@@ -134,6 +134,7 @@ sub clean_edition_number {
 	my $v1 = decode_utf8('Vydání');
 	my $v2 = decode_utf8('vydání');
 	$ret_edition_number =~ s/\s*(Vyd\.|vyd\.|$v1|$v2|Vydanie|vyd|published)//gx;
+	$ret_edition_number =~ s/English edition//ms;
 
 	$ret_edition_number =~ s/\s*rozmn\.//ms;
 	my $re = decode_utf8('souborné');
