@@ -2,7 +2,7 @@ use strict;
 use warnings;
 
 use MARC::Convert::Wikidata::Utils qw(clean_edition_number);
-use Test::More 'tests' => 53;
+use Test::More 'tests' => 54;
 use Test::NoWarnings;
 use Unicode::UTF8 qw(decode_utf8 encode_utf8);
 
@@ -33,6 +33,11 @@ is($ret, 1, encode_utf8("Edition number '$input_edition_number' after cleanup.")
 
 # Test.
 $input_edition_number = decode_utf8('First published');
+$ret = clean_edition_number($input_edition_number);
+is($ret, 1, encode_utf8("Edition number '$input_edition_number' after cleanup."));
+
+# Test.
+$input_edition_number = decode_utf8('First English edition');
 $ret = clean_edition_number($input_edition_number);
 is($ret, 1, encode_utf8("Edition number '$input_edition_number' after cleanup."));
 
