@@ -1,4 +1,5 @@
 0.20
+ - Add edition number cleanup use case.
 
 0.19 2024-11-12T08:57:15+01:00
  - Add another cover cleanup use case.
